# bitnet-rs

./: .gitignore  README.md
bitnet/: Cargo.toml
bitnet-llm/: Cargo.toml
bitnet-llm-sys/: Cargo.toml
bitnet-sys/: Cargo.toml
bitnet/examples/: chat.rs  inference_standard.rs  inference_streaming.rs
